--- a/Example/WSCycleScrollView/CycleScrollCollectionViewCell.xib
+++ b/Example/WSCycleScrollView/CycleScrollCollectionViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,13 +8,19 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CycleScrollCollectionViewCell" id="gTV-IL-0wX" customClass="CycleScrollCollectionViewCell" customModule="WSCycleScrollView_Example" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="449" height="216"/>
+            <rect key="frame" x="0.0" y="0.0" width="449" height="220"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="449" height="216"/>
+                <rect key="frame" x="0.0" y="0.0" width="449" height="220"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PoJ-s1-1nF">
-                        <rect key="frame" x="204" y="97" width="42" height="21"/>
+                        <rect key="frame" x="204" y="99" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WSCycleScrollView" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aVt-3l-4Uf">
+                        <rect key="frame" x="150" y="55" width="149" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -25,13 +31,15 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="PoJ-s1-1nF" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="DOS-wB-5Ku"/>
+                <constraint firstItem="aVt-3l-4Uf" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="NOB-dg-uW4"/>
                 <constraint firstItem="PoJ-s1-1nF" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="pfN-Tz-qbB"/>
+                <constraint firstItem="PoJ-s1-1nF" firstAttribute="top" secondItem="aVt-3l-4Uf" secondAttribute="bottom" constant="23" id="tXs-Dm-GN1"/>
             </constraints>
-            <size key="customSize" width="449" height="216"/>
+            <size key="customSize" width="449" height="220"/>
             <connections>
                 <outlet property="titleLbl" destination="PoJ-s1-1nF" id="uJC-Go-bnc"/>
             </connections>
-            <point key="canvasLocation" x="645.5" y="453"/>
+            <point key="canvasLocation" x="635.5" y="271"/>
         </collectionViewCell>
     </objects>
 </document>
